maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:16: error: '<-' expected but ')' found.
for (w-< 0 to 999){
                 ^JediEscaper:40: error: illegal start of simple expression
}
^