maze.lessons.maze.shortestpath.ShortestPathMaze.scala.code
override def run() {
var x=0
var y=0
var z=0
for (i <- 0 to getMondeHauteur()-1){
	for (j<- 0 to getMondeLargeur()-1){
		if (aBiscuit(i,j)){
		setIndication(i,j,z)
		z=z+1
		x=i
		y=j	
		}
	}
}
for (w-< 0 to 999){
	for (v <- 0 to getMondeHauteur()-1){
		for (c<- 0 to getMondeLargeur()-1){
			if (getIndication(c,v)==w){
				if (!aMurNord(c,v)){
					setIndication(c,v+1,w+1)
				}
				if (!aMurOuest(c,v)){
					setIndication(c-1,v,w+1)
				}
				if (!aMurOuest(c,v)){
					setIndication(c-1,v,w+1)
				}
				if (!aMurOuest(c+1,v)){
					setIndication(c+1,v,w+1)
				}
				if (!aMurNord(c,v-1)){
					setIndication(c,v-1,w+1)
				}
			}

		}	
	}
}
}


